deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: netflix-clone
  labels:
    app: sample-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-web
  template:
    metadata:
      labels:
        app: sample-web
    spec:
      containers:
        - name: web-server
          image: registry.dev.dramisinfo.com/netflix-clone/netflix-clone-web:4b5be36df42a4fe083d61526dff4dcc6e3c2034a
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 150m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
