deploy/base/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: netflix-clone
spec:
  selector:
    app: sample-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: netflix-clone
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  template:
    metadata:
      labels:
        app: sample-web
    spec:
  selector:
    matchLabels:
      app: sample-web
  tls:
    - hosts:
        - netflix-clone.dev.dramisinfo.com
      secretName: test-app-tls
  rules:
    - host: netflix-clone.dev.dramisinfo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
